[package]
name = "privacypass-rs"
version = "0.1.0"
authors = ["Kobi Gurkan <kobigurk@gmail.com>"]
edition = "2018"

[dependencies.amcl]
path = "./deps/amcl/version3/rust"
features = ["nist256"]

[dependencies]
rand = "0.6.1"
log = "0.4.6"
serde_json = "1.0"
serde = "1.0.83"
serde_derive = "1.0.83"
base64 = "0.10.0"
reqwest = "0.9.5"
rand_chacha = "0.1.0"
config = "0.9"
openssl = { version = "0.10", features = ["vendored"] }
byteorder = "1.2.7"
sha3 = "0.8.1"
env_logger = { version = "0.6.0", default-features = false }
rocksdb = "0.10.1"
hex = "0.3.2"

[[bin]]
name = "privacypass-rs-client"
path = "src/bin/client/main.rs"

[[bin]]
name = "privacypass-rs-server"
path = "src/bin/server/main.rs"
